@@ -26,6 +26,11 @@
 function.) </li>
  <li> New functions: <tt>env_dump()</tt>, <tt>mk?temp()</tt>,
 <tt>autosurf()</tt>, <tt>autosurf_name()</tt> </li>
+ <li> The ancilautoclose and nbwaitall sysdeps have been removed. </li>
+ <li> New header: <tt>skalibs/posixishard.h</tt> </li>
+ <li> <tt>libskarnet.a</tt> now builds as PIC by default no matter
+the toolchain's settings. Use the <tt>--disable-all-pic</tt> configure
+option to build static libraries as non-PIC. </li>
 </ul>
 
 <h2> in 2.7.0.0 </h2>
